@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=zeo
-VERSION=1.3.1
+VERSION=1.3.2
 
 DEPENDENCY="zeda=1.2.1;zm=1.2.0"
