@@ -6,67 +6,57 @@
 
 #include <zeo/zeo_mat3d.h>
 
-/* zVec3DBarycenterPL
- * - barycenter of a point cloud given by a list.
- */
+/* barycenter of a point cloud given by a list. */
 zVec3D *zVec3DBarycenterPL(zVec3DList *pl, zVec3D *c)
 {
   zVec3DListCell *pc;
 
-  zVec3DClear( c );
+  zVec3DZero( c );
   zListForEach( pl, pc )
     zVec3DAddDRC( c, pc->data );
   return zVec3DDivDRC( c, zListNum(pl) );
 }
 
-/* zVec3DBarycenter
- * - barycenter of a point cloud given by an array.
- */
+/* barycenter of a point cloud given by an array. */
 zVec3D *zVec3DBarycenter(zVec3D p[], int num, zVec3D *c)
 {
   register int i;
 
-  zVec3DClear( c );
+  zVec3DZero( c );
   for( i=0; i<num; i++ )
     zVec3DAddDRC( c, &p[i] );
   return zVec3DDivDRC( c, num );
 }
 
-/* zVec3DPCA_PL
- * - PCA against vector cloud given by a list.
- */
+/* PCA to vector cloud given by a list. */
 zVec3D *zVec3DPCA_PL(zVec3DList *pl, zVec3D evec[])
 {
   zMat3D vm;
   double eval[3];
   zVec3DListCell *pc;
 
-  zMat3DClear( &vm );
+  zMat3DZero( &vm );
   zListForEach( pl, pc )
     zMat3DAddDyad( &vm, pc->data, pc->data );
   zMat3DSymEig( &vm, eval, evec );
   return evec;
 }
 
-/* zVec3DPCA
- * - PCA against vector cloud given by an array.
- */
+/* PCA to vector cloud given by an array. */
 zVec3D *zVec3DPCA(zVec3D p[], int num, zVec3D evec[])
 {
   zMat3D vm;
   double eval[3];
   register int i;
 
-  zMat3DClear( &vm );
+  zMat3DZero( &vm );
   for( i=0; i<num; i++ )
     zMat3DAddDyad( &vm, &p[i], &p[i] );
   zMat3DSymEig( &vm, eval, evec );
   return evec;
 }
 
-/* zVec3DBaryPCA_PL
- * - barycenter of and PCA against vector cloud given by a list.
- */
+/* barycenter of and PCA to vector cloud given by a list. */
 zVec3D *zVec3DBaryPCA_PL(zVec3DList *pl, zVec3D *c, zVec3D evec[])
 {
   zMat3D vm;
@@ -75,7 +65,7 @@ zVec3D *zVec3DBaryPCA_PL(zVec3DList *pl, zVec3D *c, zVec3D evec[])
   zVec3D dp;
 
   zVec3DBarycenterPL( pl, c );
-  zMat3DClear( &vm );
+  zMat3DZero( &vm );
   zListForEach( pl, pc ){
     zVec3DSub( pc->data, c, &dp );
     zMat3DAddDyad( &vm, &dp, &dp );
@@ -84,9 +74,7 @@ zVec3D *zVec3DBaryPCA_PL(zVec3DList *pl, zVec3D *c, zVec3D evec[])
   return c;
 }
 
-/* zVec3DBaryPCA
- * - barycenter of and PCA against vector cloud given by an array.
- */
+/* barycenter of and PCA to vector cloud given by an array. */
 zVec3D *zVec3DBaryPCA(zVec3D p[], int num, zVec3D *c, zVec3D evec[])
 {
   zMat3D vm;
@@ -95,7 +83,7 @@ zVec3D *zVec3DBaryPCA(zVec3D p[], int num, zVec3D *c, zVec3D evec[])
   register int i;
 
   zVec3DBarycenter( p, num, c );
-  zMat3DClear( &vm );
+  zMat3DZero( &vm );
   for( i=0; i<num; i++ ){
     zVec3DSub( &p[i], c, &dp );
     zMat3DAddDyad( &vm, &dp, &dp );
